# ismb-app

./: .gitignore  README.md  requirements.txt
factory/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
factory/airflow/dags/: factory_airflow_dag.py
factory/conf/: logging.yml
factory/conf/airflow/: catalog.yml
factory/conf/airflow/config/: airflow.cfg
factory/conf/airflow/dags/: factory_airflow_dag.py  factory_airflow_dag_od.py  factory_dag.py
factory/conf/base/: catalog.yml  parameters_data_ingestion.yml  parameters_data_processing.yml  parameters_data_score.yml
factory/conf/local/: credentials.yml
factory/data/sandbox/: cds_stage.csv  ibov_stage.csv  indicador_atividade_mercado.csv  indicador_confianca_mercado_local.csv  indicador_retorno_mercado.csv  indicador_risco_credito.csv  indicador_sentimento_noticias.csv  indicador_volatilidade_mercado.csv  rw_cds_stage.csv  rw_ibov_stage.csv  rw_ifix_stage.csv  rw_infomoney_stage.csv  rw_ivvb_stage.csv  rw_moneytimes_stage.csv  rw_seudinheiro_stage.csv  rw_valorinveste_stage.csv
factory/docs/indicators/: indicador_atividade_mercado.md  indicador_confianca_mercado_local.md  indicador_retorno_mercado.md  indicador_risco_credito.md  indicador_sentimento_midia.md  indicador_volatilidade_mercado.md
factory/docs/source/: conf.py  index.rst
factory/src/factory/: __init__.py  __main__.py  datasets.py  hooks.py  settings.py
factory/src/factory/pipelines/data_ingestion/: nodes.py  pipeline.py  utils.py
factory/src/factory/pipelines/data_processing/: nodes.py  pipeline.py  utils.py
factory/src/factory/pipelines/data_score/: __init__.py  nodes.py  pipeline.py
factory/tests/pipelines/data_score/: test_pipeline.py
infra/: outputs.tf  s3.tf  terraform.tfvars
infra/aws/: main.tf  provider.tf  variables.tf  versions.tf
