[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "factory"
description = "Intelligent Scoring and Market Behavior (ISMB) Factory Pipeline"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Diogo Leme Jacomini", email = "diogojacomini@outlook.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial"
]
dynamic = ["version"]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0", 
    "notebook",
    "kedro~=0.19.14",
    "pandas>=2.0",
    "yfinance>=0.2.0",
    "kedro-viz>=11.0",
    "kedro-datasets>=7.0", 
    "kedro-airflow>=0.10",
    "kedro-telemetry>=0.6",
    "torch>=2.0",
    "transformers>=4.50",
    "beautifulsoup4>=4.10",
    "workalendar>=0.5",
    "apache-airflow>=3.0"
]

[project.urls]
"Homepage" = "https://github.com/diogojacomini/ismb-app"
"Bug Reports" = "https://github.com/diogojacomini/ismb-app/issues" 
"Source" = "https://github.com/diogojacomini/ismb-app"
"Documentation" = "https://github.com/diogojacomini/ismb-app/wiki"

[project.scripts]
"factory" = "factory.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
     "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.1.8"
]

[tool.setuptools.dynamic]
version = {attr = "factory.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "factory"
project_name = "factory"
kedro_init_version = "0.19.14"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/factory -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long

[tool.kedro_telemetry]
project_id = "caed00aa8f3a4d549e42179074798cfe"
